# MPSD

./: .gitignore  Neev-release-ver0.10.1.md  Neev-release-ver0.10.2.md  Neev-release-ver0.9.1.md  Neev-release-ver0.9.2.md  PRD.md  README.md  apis.py  build.yml  package-lock.json  package.json  pom.xml  test.cpp  tsconfig.json
.github/workflows/: build.yml  build_mvn.yml  codereivew.yml  maven.yml  python-build.yml  zyang-maven.yml
MPSD-liutianyi_71255903023/: README.md
MPSD-liutianyi_71255903023/poem/: pom.xml
New Energy Electric Vehicles Field Knowledge Graph/: 新能源汽车.xmind
New Energy Electric Vehicles Field Knowledge Graph/NeevField/: README.md  pom.xml
cxx/: CMakeLists.txt  main.cpp  requirement.sh
data/cls/: label.txt  test.csv  train.csv  vocab.txt
data/kg/dictionary/: complications.txt  departments.txt  diseases.txt  drugs.txt  foods.txt  inspections.txt  recipes.txt  symptoms.txt
data/ner/: label.txt  test.csv  train.csv  vocab.txt
frontend/: index.html  index02.html  index04.html  main.java  package.json  script02.js
kg/: __init__.py  build_kg.py  search_kg.py  spider4xywy.py
nlp/: __init__.py  mock_utils.py
nlp/cls/: __init__.py  dataset.py  model.py  operation.py  run_cls.py  vocab.txt
nlp/ner/: __init__.py  dataset.py  model.py  operation.py  run_ner.py  vocab.txt
public/: index.html
python/: ctrip_hotels.py  ctrip_hotels_comments.py  ctrip_spot_comments.py  main.py
src/: App.tsx  index.css  index.tsx  setupProxy.js
src/router/: index.tsx
src/utils/: request.d.ts  request.ts
static/html/: index.html
(+14523 files in other folders)
